if ENABLE_INDICATOR
    MAYBE_INDICATOR = g15-indicator.1
endif

if ENABLE_SYSTEMTRAY
    MAYBE_SYSTEMTRAY = g15-systemtray.1
endif

man1_MANS = g15-desktop-service.1 g15-config.1 $(MAYBE_INDICATOR) $(MAYBE_SYSTEMTRAY) 
EXTRA_DIST = g15-desktop-service.1 g15-config.1 g15-indicator.1 g15-systemtray.1