if ENABLE_INDICATOR
    MAYBE_INDICATOR = g15-indicator.1
endif

if ENABLE_SYSTEMTRAY
    MAYBE_SYSTEMTRAY = g15-systemtray.1
endif

if ENABLE_DRIVER_KERNEL
    MAYBE_SYSTEM_SERVICE = g15-system-service.1
endif

man1_MANS = g15-desktop-service.1 g15-config.1 $(MAYBE_INDICATOR) $(MAYBE_SYSTEMTRAY) $(MAYBE_SYSTEM_SERVICE) 
EXTRA_DIST = g15-desktop-service.1 g15-config.1 g15-indicator.1 g15-systemtray.1 g15-system-service.1