imagesdir = $(datadir)/icons/gnome/scalable/status
images_DATA = logitech-g110-symbolic.svg \
		logitech-g11-symbolic.svg \
		logitech-g13-symbolic.svg \
		logitech-g15v2-symbolic.svg \
		logitech-g15v1-symbolic.svg \
		logitech-g19-symbolic.svg \
		logitech-g35-symbolic.svg \
		logitech-g510-symbolic.svg \
		logitech-g930-symbolic.svg \
		logitech-gamepanel-symbolic.svg \
		logitech-mx5500-symbolic.svg \
		logitech-virtual-symbolic.svg \
		logitech-z10-symbolic.svg

EXTRA_DIST = \
	$(images_DATA)
